# DE-Template-with-setup.py

./: README.md  template.yaml
skeleton/: catalog-info.yaml  pyproject.toml
skeleton/src/common_utils/: __init__.py
skeleton/src/common_utils/utils/: _logging.py  aws.py  hash.py  helpers.py  io.py  utils.py
skeleton/src/de_modules/: __main__.py
skeleton/src/tests/: conftest.py
{{cookiecutter.project_name}}/: .flake8  .pre-commit-config.yaml  Makefile  README.md  setup.py
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/conf/: README.md
{{cookiecutter.project_name}}/src/common_utils/config/: config_parser.py
{{cookiecutter.project_name}}/src/common_utils/utils/: spark.py
