[tool.poetry]
name = "tmna-{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [
  
]
packages = [{include = "de_modules", from="src"}]
exclude = ["src/tests"]
readme = "README.md"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cerberus = "^1.3.5"
pandas = "^2.0.0"
polars = "^0.20.23"
pydantic = "^2.0"
great-expectations = "^0.18.13"
pyarrow = "^10.0.0"
openpyxl = "^3.0.0"
boto3 = "^1.30.1"
pyspark = "^3.1"
s3fs = "^2023.1.1"
awswrangler = "^3.0.1"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# For documentation
pyan3 = "1.1.1"
sphinx = "<7.2.6"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^2.0.0"
sphinx-copybutton = "^0.5.2"
sphinx-markdown-tables = "^0.0.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
extend-exclude = '''
  .git
  .github
  .hg
  .mypy_cache
  .tox
  .venv
  _build
  buck-out
  build
  dist
  notebooks
'''


[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true
skip = ["__init__.py", ".venv"]

[pytest]
pythonpath = "src/de_modules"
 